--- a/scss/styles/_section2.scss
+++ b/scss/styles/_section2.scss
@@ -22,21 +22,31 @@
     p {
         font-size: 18px;
         font-weight: 400;
-        height: 115px;
         line-height: 23px;
     }
 
     .cards {
-        display: flex;
-        justify-content: flex-end;
-        flex-wrap: wrap;
+        @include mainflex(row, flex-end, center, wrap);
         gap:33px;
+
+        @media (max-width:1050px) {
+            flex-direction: row;
+            justify-content: center;
+            
+        }
+
+        @media (max-width:300px) {
+            width:150px;
+        }
     }
 
     .card {
         width:286px;
         font-family: $main-font;
         color: $main-color;
+        @media (max-width:300px) {
+            width:150px;
+        }
 
         h2 {
             color: $head-color;
