--- a/scss/styles/_section1.scss
+++ b/scss/styles/_section1.scss
@@ -4,12 +4,26 @@
     background-image: url(../../images/Rectangle\ 1.png);
     background-repeat: no-repeat;
     @include mainflex (column, center, center, no-wrap);
+    @media (max-width:1000px) {
+        background-position: center;
+    }
+
+    @media (max-width:300px) {
+        background-position:center;
+    }
 
     h1 {
         font-family: $main-font;
         font-size: 79px;
         font-weight: 700;
         color: white;
+        @media (max-width:900px) {
+            font-size: 50px;
+        }
+
+        @media (max-width:900px) {
+            font-size: 20px;
+        }
     }
 
     p {
@@ -17,5 +31,12 @@
         color: white;
         font-weight: 400;
         font-size: 19px;
+        @media (max-width:900px) {
+            font-size: 15px;
+        }
+
+        @media (max-width:300px) {
+            font-size: 8px;
+        }
     }
 }
