--- a/css/global.css
+++ b/css/global.css
@@ -80,6 +80,15 @@ a {
   flex-wrap: no-wrap;
   padding-top: 33px;
 }
+.container .fa-bars {
+  display: none;
+  cursor: pointer;
+}
+@media (max-width: 750px) {
+  .container .fa-bars {
+    display: block;
+  }
+}
 @media (max-width: 750px) {
   .container nav {
     display: none;
@@ -98,16 +107,6 @@ a {
   color: #636060;
   font-weight: 400px;
   font-size: 17px;
-}
-
-.fa-bars {
-  display: none;
-  cursor: pointer;
-}
-@media (max-width: 750px) {
-  .fa-bars {
-    display: block;
-  }
 }
 
 .s-1 {
