--- a/css/global.css
+++ b/css/global.css
@@ -112,7 +112,7 @@ a {
 .s-1 {
   height: 606px;
   margin-top: 31px;
-  background-image: url(../../images/Rectangle\ 1.png);
+  background-image: url("../../images/Rectangle 1.png");
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
