--- a/scss/styles/_section1.scss
+++ b/scss/styles/_section1.scss
@@ -1,5 +1,5 @@
 .s-1 {
-    background-image: url(../../images/Rectangle\ 1.png);
+    background-image: url(/../images/Rectangle\ 1.png);
     height: 606px;
     margin-top: 31px;
     background-repeat: no-repeat;
