--- a/css/global.css
+++ b/css/global.css
@@ -110,9 +110,9 @@ a {
 }
 
 .s-1 {
+  background-image: url(../../images/Rectangle.png);
   height: 606px;
   margin-top: 31px;
-  background-image: url("../../images/Rectangle 1.png");
   background-repeat: no-repeat;
   display: flex;
   flex-direction: column;
