--- a/scss/global.scss
+++ b/scss/global.scss
@@ -6,3 +6,14 @@
 
 
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-5');
+
+
+.s-1 {
+    background-image: url(../../images/Rectangle\ 1.jpg);
+    height: 606px;
+    margin-top: 31px;
+    background-repeat: no-repeat;
+    @include mainflex (column, center, center, no-wrap);
+    @media (max-width:1000px) {
+        background-position: center;
+    }
