--- a/scss/global.scss
+++ b/scss/global.scss
@@ -9,7 +9,7 @@
 
 
 .s-1 {
-    background-image: url(../../images/Rectangle\ 1.jpg);
+    background-image: url(../images/Rectangle\ 1.jpg);
     height: 606px;
     margin-top: 31px;
     background-repeat: no-repeat;
