--- a/scss/global.scss
+++ b/scss/global.scss
@@ -9,7 +9,7 @@
 
 
 .s-1 {
-    background-image: url(../images/Rectangle\ 1.jpg);
+    background-image: url(../images/Rectangle.png);
     height: 606px;
     margin-top: 31px;
     background-repeat: no-repeat;
@@ -17,3 +17,8 @@
     @media (max-width:1000px) {
         background-position: center;
     }
+
+    @media (max-width:300px) {
+        background-position:center;
+    }
+}
