--- a/scss/styles/_section1.scss
+++ b/scss/styles/_section1.scss
@@ -1,16 +1,16 @@
-// .s-1 {
-//     background-image: url(../../images/Rectangle\ 1.jpg);
-//     height: 606px;
-//     margin-top: 31px;
-//     background-repeat: no-repeat;
-//     @include mainflex (column, center, center, no-wrap);
-//     @media (max-width:1000px) {
-//         background-position: center;
-//     }
+.s-1 {
+    // background-image: url(../../images/Rectangle\ 1.jpg);
+    // height: 606px;
+    // margin-top: 31px;
+    // background-repeat: no-repeat;
+    // @include mainflex (column, center, center, no-wrap);
+    // @media (max-width:1000px) {
+    //     background-position: center;
+    // }
 
-    @media (max-width:300px) {
-        background-position:center;
-    }
+    // @media (max-width:300px) {
+    //     background-position:center;
+    // }
 
     h1 {
         font-family: $main-font;
