--- a/scss/global.scss
+++ b/scss/global.scss
@@ -8,17 +8,17 @@
 @import url('https://fonts.cdnfonts.com/css/helvetica-neue-5');
 
 
-.s-1 {
-    background-image: url("../images/Rectangle.png");
-    height: 606px;
-    margin-top: 31px;
-    background-repeat: no-repeat;
-    @include mainflex (column, center, center, no-wrap);
-    @media (max-width:1000px) {
-        background-position: center;
-    }
+// .s-1 {
+//     background-image: url("../images/Rectangle.png");
+//     height: 606px;
+//     margin-top: 31px;
+//     background-repeat: no-repeat;
+//     @include mainflex (column, center, center, no-wrap);
+//     @media (max-width:1000px) {
+//         background-position: center;
+//     }
 
-    @media (max-width:300px) {
-        background-position:center;
-    }
-}
+//     @media (max-width:300px) {
+//         background-position:center;
+//     }
+// }
