--- a/css/global.css
+++ b/css/global.css
@@ -110,7 +110,7 @@ a {
 }
 
 .s-1 {
-   background-image: url("../images/Rectangle.png");
+  background-image: url("../../images/Rectangle.png");
   height: 606px;
   margin-top: 31px;
   background-repeat: no-repeat;
