--- a/scss/styles/_section1.scss
+++ b/scss/styles/_section1.scss
@@ -3,6 +3,7 @@
     height: 606px;
     margin-top: 31px;
     background-repeat: no-repeat;
+    background-size: cover;
     @include mainflex (column, center, center, no-wrap);
     @media (max-width:1000px) {
         background-position: center;
